--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "nodejsf8",
   "version": "1.0.0",
   "description": "node js with F8",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect index.js",
+    "start": "nodemon --inspect src/index.js",
+    "watch": "node-sass --watch src/resources/scss/ -o src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,10 +26,12 @@
   },
   "homepage": "https://github.com/khaikq02/nodejsF8#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-handlebars": "^5.1.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
+    "node-sass": "^7.0.1",
     "nodemon": "^2.0.16"
   }
 }
